# multiplayer-fps

./: Cargo.toml  README.md
assets/: ak47_scaled.glb  akm.gltf  night_sky_texture.avif
assets/character/: player_scaled.glb
src/: animation.rs  bullet_tracer.rs  camera.rs  flashlight.rs  game.rs  hitbox.rs  hud.rs  main.rs  minimap.rs  player.rs  shoot.rs  sounds.rs  weapons.rs  world.rs
src/network/: client.rs  mods.rs  server.rs
