[package]
name = "multiplayer-fps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
bincode = "1.3.3"
log = "0.4"
bevy = { version = "0.11.3", features=["jpeg"] }
bevy_renet = "0.0.9"
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = "0.22.0"
rand = "0.8.5"
local-ip-address = "0.5.6"